## Process this file with automake to produce Makefile.in
pkgdata_DATA =  \
 FontDataBase \
 n021003l.pfb \
 n021023l.pfb \
 n021004l.pfb \
 n021024l.pfb \
 n019003l.pfb \
 n019023l.pfb \
 n019004l.pfb \
 n019024l.pfb \
 n022003l.pfb \
 n022023l.pfb \
 n022004l.pfb \
 n022024l.pfb \
 s050000l.pfb \
 d050000l.pfb \
 n021003l.afm \
 n021023l.afm \
 n021004l.afm \
 n021024l.afm \
 n019003l.afm \
 n019023l.afm \
 n019004l.afm \
 n019024l.afm \
 n022003l.afm \
 n022023l.afm \
 n022004l.afm \
 n022024l.afm \
 s050000l.afm \
 d050000l.afm
